Pages/Fleet/styles/layout.css
.container.fleet{
    margin: auto;
    margin-top: 1rem;
    width: 90vw;
    height: 80vh;
    align-items: center;
    position: relative;
    justify-content: space-between;

    display: flex;
}

.fleet-icons-container{
    width: 15%;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    position: relative;
}
.fleet-info{
    left: 17%;
    width: 25%;
    height: 100%;
    position: absolute;
    background-color: #191938;
    border-radius: 3rem;
    transition: all 2s ease-in-out;
}

.fleet-info *{
    background-color: transparent;
}
.fleet-info > #expanded-state{
    opacity: 0;
    transition: all 2s ease-in-out;
    position: absolute;
}

.fleet-info > #main-state{
    padding-left: 1.5rem;
    padding-right: 1.5rem;
    margin-top: 2rem;
    display: flex;
    transition: all 2s ease-in-out;
    position: relative;
    opacity: 1;
    height: 90%;
    align-items: center;
    flex-direction: column;
    justify-content: space-between;
}
#main-state > h1, #expanded-state h1{
    border-bottom: 1px solid red;
    width: 100%;
    font-weight: 400;
    font-size: 3.5rem;
}
#main-state > #body{
    font-weight: 400;
    font-size: 1.3rem;
}
#main-state > #view-more-btn{
    width: 100%;
    height: 10%;
    border-radius: 1rem;
    background-color: white;
    color: black;
    display: flex;
    justify-content: center;
    align-items: center;
}

#main-state > #mini-stats td{
    padding-right: 1rem;
    padding-bottom: 1rem;
    font-size: 1.5rem;
    font-weight: 300;
}

.fleet-info.expanded{
    left: 10%;
    width: 80%;
}
.fleet-info.expanded > #main-state{
    opacity: 0;
    position: absolute;
}
.fleet-info.expanded > #expanded-state{
    opacity: 1;
    position: relative;
    width: 100%;
    margin-top: 1rem;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}
#expanded-state > #text-details{
    width: 50%;
    height: 100%;
    padding-left: 2rem;
    padding-right: 2rem;
    border-radius: 3rem 0 0 3rem;
}
#text-details > h1{
    text-align: center;
    font-weight: 300;
}
#text-details > #body{
    margin-top: 2rem;
    height: 80%;
    font-size: 1.3rem;
    font-weight: 400;
    overflow-y: scroll;
}

#expanded-state.plane > #graph-details{
    width: 50%;
    height: 100%;
    padding-left: 2rem;
    padding-right: 2rem;
    border-radius: 0 3rem 3rem 0;
}
#expanded-state.drone > #graph-details{
    display: none;
}

#graph-details > h1{
    font-weight: 300;
}

#graph-details > #plot-graph{
    margin-top: 2rem;
    width: 100%;
    height: 40%;
}

#graph-details > #graph-toggle-control-panel{
    margin-top: 1rem;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 10%;
}

#graph-toggle-control-panel i{
    padding: 2rem;
    border-radius: 50%;
    cursor: pointer;
}

.fleet-model{
    width: 55%;
    height: 95%;
    background-color: blue;
    border-radius: 2rem;
}
.toggle{
    height: 3rem;
    width: 3rem;
    object-fit: cover;
}
#up{
    margin-bottom: 1rem;
}
#down{
    margin-top: 1rem;
}
.fleet-icons{
	overflow-y: auto;
    width: 100%;
    height: 80%;
    display: inline-block;
}
.fleet-icons-icon{
    margin: auto;
    margin-top: 1rem;
    height: 11rem;
    width: 11rem;
    border-radius: 1rem;
    border: 1px solid white; 
}

